--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
+    "composite": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
